--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,28 @@
         {% endif %}
     </head>
     <body>
+         <!-- General news section  -->
+         <h3> General News</h3>
+         <ul>
+            {% for general_news in general %}
+                <li>{{ general_news.name}}</li>
+            {% endfor %}
+        </ul>
 
+        <!-- Business news -->
+        <!-- <h3> Business News </h3>
+         <ul>
+            {% for business_news in business %}
+                <li>{{ business_news.title}}</li>
+            {% endfor %}
+        </ul> -->
+
+        <!-- Sports news -->
+        <!-- <h3>Sports News</h3>
+         <ul>
+            {% for sports_news in sports %}
+                <li>{{ sports_news.title}}</li>
+            {% endfor %}
+         </ul> -->
     </body>
 </html>
