--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,6 @@
+{% extends 'base.html'%}
+{% import 'macros.html' as macro%}
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -12,25 +15,19 @@
          <!-- General news section  -->
          <h3> General News</h3>
          <ul>
-            {% for general_news in general %}
-                <li>{{ general_news.name}}</li>
-            {% endfor %}
+            {{ macro.displayNewsList(general) }}
         </ul>
 
         <!-- Business news -->
-        <!-- <h3> Business News </h3>
+        <h3> Business News </h3>
          <ul>
-            {% for business_news in business %}
-                <li>{{ business_news.title}}</li>
-            {% endfor %}
-        </ul> -->
+            {{ macro.displayNewsList(business) }}
+        </ul>
 
-        <!-- Sports news -->
-        <!-- <h3>Sports News</h3>
+        <!--Sports news -->
+         <h3>Sports News</h3>
          <ul>
-            {% for sports_news in sports %}
-                <li>{{ sports_news.title}}</li>
-            {% endfor %}
-         </ul> -->
+            {{ macro.displayNewsList(sports) }}
+         </ul>
     </body>
 </html>
