Add the code showing the news sources in columns

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,7 +1,13 @@
 {% macro displayNewsList(news_list) %}
 
     {% for news in news_list %}
-        <li>{{ news.name}}</li>
+        <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 new-card">
+            <img src="{{ news.url }}" alt="{{ news.name }} poster" class="img-responsive">
+            <li class="text-center">
+                <a href="/news/{{news.name}}">
+                    {{ news.name|truncate(10)}}</a>
+        </li>
+    </div>
     {% endfor %}
 
-{% endmacro %}
+{% endmacro %}  
