--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -1,14 +1,15 @@
 {% extends 'base.html'%}
+
 <!-- Content block -->
 {% block content %}
 <div class="container">
 
     <!-- News background -->
     <div class="row">
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 posterPath" style="background: url({{news.name}}) no-repeat center center">
+        <div class="col-md-4" style="background: url({{news.url}}) no-repeat center center">
         </div>
 
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 news-details">
+        <div class="col-md-4 news-details">
             <h3>{{ news.name }}</h3>
 
             <p class="description"> {{ news.description }}</p>
