--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,24 +24,40 @@
         {% block content %}
         
          <!-- General news section  -->
-         <h3> General News</h3>
-         <ul>
-            {{ macro.displayNewsList(general) }}
-        </ul>
-        <hr>
+         <div class ="container-fluid">
+            <div class ="row">
+                <div class ="col-md-12">
+                    <h3> General News</h3>
+                </div>    
+                        <ul>
+                             {{ macro.displayNewsList(general) }}
+                        </ul>
+                </div>         
+                       
+                       
 
         <!-- Business news -->
-        <h3> Business News </h3>
-         <ul>
-            {{ macro.displayNewsList(business) }}
-        </ul>
-        <hr>
+        <div class ="row">
+            <div class ="col-md-12">
+                <h3> Business News </h3>
+                </div>
+                <ul>
+                    {{ macro.displayNewsList(business) }}
+                </ul>
+            </div> 
+                
 
         <!--Sports news -->
-         <h3>Sports News</h3>
-         <ul>
-            {{ macro.displayNewsList(sports) }}
-         </ul>
+        <div class ="row">
+            <div class ="col-md-12">
+            <h3>Sports News</h3>
+            </div>
+                <ul>
+                  {{ macro.displayNewsList(sports) }}
+                </ul>
         {% endblock %} 
+        </div>
+    
+</div>
     </body>
 </html>
