--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+<!-- {% extends 'base.html'%}
 
 <!-- Content block -->
 {% block content %}
@@ -20,4 +20,4 @@
     </div>
 
 </div>
-{% endblock %}
+{% endblock %} -->
