--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -13,16 +13,16 @@
         <div class="row">
             {% for article in news %}
             <div class="col-md-3">
-                <a href={{article.url}} target="_blank">
+                <!-- <a href={{article.url}} target="_blank">
                     <img src={{article.urlToImage}} alt="">
-                </a>
+                </a> -->
                 <div>
                     <h4 class="text-bold"> {{article.title}} </h4>
                     <p class="small">- {{article.author}} </p>
                     <p class="small">Posted on {{article.publishedAt}}</p>
                     <hr>
                     <p> {{article.description}}
-                        <a href={{article.url}} target="_blank">Read Full Article</a>
+                        <a href={{article.url}}>Read Full Article</a>
                     </p>
                 </div>
             </div>
