--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,6 +20,17 @@
         <!-- Content block -->
         {% block content %}
         
+        <div class = "well">
+            <div class="container">
+        
+            <div class = "jumbotron" style="background-color:rgba(14, 219, 209, 0.637)">
+                <h2 class="jumboheading" style="text-align:center"> <strong>News Highlights App</strong> </h2>
+                    <p class="welcome" >Welcome to the #1 site where you read and catch up on all the latest and trending news!!!</p>
+                    <p class="welcome">The only app that keeps you updated with all the up-to-date news.</p>
+            </div>
+        </div>
+        </div>
+
          <!-- General news section  -->
          <div class ="container-fluid">
             <div class ="row">
@@ -55,6 +66,7 @@
         {% endblock %} 
         </div>
     
+
 </div>
     </body>
 </html>
