--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
         <div class = "well">
             <div class="container">
         
-            <div class = "jumbotron" style="background-color:rgba(14, 219, 209, 0.637)">
+            <div class = "jumbotron" style="background-color:rgb(233, 188, 122)">
                 <h2 class="jumboheading" style="text-align:center"> <strong>News Highlights App</strong> </h2>
                     <p class="welcome" >Welcome to the #1 site where you read and catch up on all the latest and trending news!!!</p>
                     <p class="welcome">The only app that keeps you updated with all the up-to-date news.</p>
