--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,22 +20,24 @@
         <!-- Content block -->
         {% block content %}
         
-        <div class = "well">
-            <div class="container">
-        
-            <div class = "jumbotron" style="background-color:rgb(233, 188, 122)">
-                <h2 class="jumboheading" style="text-align:center"> <strong>News Highlights App</strong> </h2>
-                    <p class="welcome" >Welcome to the #1 site where you read and catch up on all the latest and trending news!!!</p>
-                    <p class="welcome">The only app that keeps you updated with all the up-to-date news.</p>
-            </div>
-        </div>
-        </div>
+        <div class="jumbotron" style = "background-color:rgb(236, 168, 20)">
+                <div class="container">
+                  <h2 class="display-3" style="text-align:center">NEWS HIGHLIGHTS APP</h2>
+                  <p>Welcome to the #1 site where you read and catch up on all the latest and trending news!!!</p>
+                  <p>The only app that keeps you updated with all the up-to-date news.</p>
+                </div>
+              </div>
 
+
+
+        <!-- <div class = "jumbotron" style="background-color:rgb(233, 188, 122)"> -->
          <!-- General news section  -->
-         <div class ="container-fluid">
+         <div class ="container-fluid" style = "background-color:rgb(173, 226, 233)">
+
             <div class ="row">
                 <div class ="col-md-12">
-                    <h3> General News</h3>
+                      <h3 style="text-align: center"> <strong>General News</strong></h3>
+                      <hr>
                 </div>    
                         <ul>
                              {{ macro.displayNewsList(general) }}
@@ -47,7 +49,8 @@
         <!-- Business news -->
         <div class ="row">
             <div class ="col-md-12">
-                <h3> Business News </h3>
+                <h3 style="text-align: center"> <strong>Business News</strong></h3>
+                <hr>
                 </div>
                 <ul>
                     {{ macro.displayNewsList(business) }}
@@ -58,7 +61,8 @@
         <!--Sports news -->
         <div class ="row">
             <div class ="col-md-12">
-            <h3>Sports News</h3>
+                <h3 style="text-align: center"> <strong>Sports News</strong></h3>
+                <hr>
             </div>
                 <ul>
                   {{ macro.displayNewsList(sports) }}
