Add final changes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,8 +23,8 @@
         <div class="jumbotron" style = "background-color:rgb(236, 168, 20)">
                 <div class="container">
                   <h2 class="display-3" style="text-align:center">NEWS HIGHLIGHTS APP</h2>
-                  <p>Welcome to the #1 site where you read and catch up on all the latest and trending news!!!</p>
-                  <p>The only app that keeps you updated with all the up-to-date news.</p>
+                  <p style="text-align:center">Welcome to the #1 site where you read and catch up on all the latest and trending news!!!</p>
+                  <p style="text-align:center">The only app that keeps you updated with all the up-to-date news.</p>
                 </div>
               </div>
 
